--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository</name>
-	      <url>http://15.206.123.201:8081/repository/sai-snapshot/></url>
+	      <url>http://15.206.123.201:8081/repository/sai-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
